add_subdirectory(disto)
add_subdirectory(asrc)
add_subdirectory(bjt)
add_subdirectory(bsim1)
add_subdirectory(bsim2)
add_subdirectory(cap)
add_subdirectory(cccs)
add_subdirectory(ccvs)
add_subdirectory(csw)
add_subdirectory(dio)
add_subdirectory(ind)
add_subdirectory(isrc)
add_subdirectory(jfet)
add_subdirectory(ltra)
add_subdirectory(mes)
add_subdirectory(mos1)
add_subdirectory(mos2)
add_subdirectory(mos3)
add_subdirectory(mos6)
add_subdirectory(res)
add_subdirectory(sw)
add_subdirectory(tra)
add_subdirectory(urc)
add_subdirectory(vccs)
add_subdirectory(vcvs)
add_subdirectory(vsrc)

add_library(dev devsup.c)

target_link_libraries(dev asrc bjt bsim1 bsim2 cap cccs ccvs csw dio
  ind isrc jfet ltra mes mos1 mos2 mos3 mos6 res sw tra urc vccs vcvs vsrc)
