add_library(inp ifeval.c ifnewuid.c inp2b.c inp2c.c inp2d.c inp2dot.c
  inp2e.c inp2f.c inp2g.c inp2h.c inp2i.c inp2j.c inp2k.c
  inp2l.c inp2m.c inp2o.c inp2q.c inp2r.c inp2s.c inp2t.c
  inp2u.c inp2v.c inp2w.c inp2z.c inpaname.c inpapnam.c
  inpcfix.c inpdomod.c inpdoopt.c inpdpar.c inperrc.c
  inperror.c inpeval.c inpfindl.c inpgmod.c inpgtitl.c
  inpgtok.c inpgval.c inpkmods.c inplist.c inplkmod.c
  inpmkmod.c inpmktmp.c inppas1.c inppas2.c inppname.c
  inpptree.c inpsymt.c inptyplk.c ptfuncs.c sperror.c
  inpgstr.c)